--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -92,12 +92,17 @@
   position: absolute;
   width: -moz-max-content;
   width: max-content;
+  max-width: 100%;
   border-radius: 16px;
   display: flex;
   align-items: center;
   gap: 10px;
   padding: 12px 16px;
   background-color: var(--white);
+  overflow: hidden;
+}
+.scenaries .scenaries_item .label svg {
+  min-width: 20px;
 }
 .scenaries .scenaries_item .description {
   position: absolute;
@@ -123,6 +128,7 @@
 }
 .scenaries .scenaries_item .description .title_block {
   display: flex;
+  align-items: flex-start;
   gap: 15px;
   margin-bottom: 7.5px;
 }
@@ -181,14 +187,81 @@
     left: 30px;
   }
 }
+.scenaries .scenaries_item.c .label {
+  top: 50%;
+  left: 30%;
+  transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
+  transform: translateY(-50%);
+}
+.scenaries .scenaries_item.c .description {
+  background-image: url("./../images/air_back.svg");
+  background-position: right bottom;
+  background-repeat: no-repeat;
+}
+.scenaries .scenaries_item.c .description .title_block {
+  position: relative;
+  top: 20%;
+  left: 20%;
+  transition: 0.2s cubic-bezier(0.56, -0.64, 0.42, 1.5);
+  transition-delay: 0s;
+}
 .scenaries .scenaries_item.c .description p {
   -webkit-line-clamp: 4;
+}
+@media screen and (min-width: 992px) {
+  .scenaries .scenaries_item.c .description:hover .title_block {
+    transition-delay: 0.1s;
+    top: 0;
+    left: 0;
+  }
+}
+@media screen and (min-width: 992px) {
+  .scenaries .scenaries_item.c:hover .label {
+    top: 30%;
+    left: 10%;
+  }
+}
+.scenaries .scenaries_item.d .label {
+  top: 0%;
+  left: 0;
+}
+.scenaries .scenaries_item.d .description {
+  background-image: url("./../images/mount_back.svg");
+  background-position: left bottom;
+  background-repeat: no-repeat;
 }
 .scenaries .scenaries_item.d .description p {
   -webkit-line-clamp: 6;
 }
+.scenaries .scenaries_item.f .label {
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  transition: 0.3s cubic-bezier(0.48, -1.68, 0.55, 1.9);
+}
+.scenaries .scenaries_item.f .description {
+  background-image: url("./../images/mount_back.svg");
+  background-position: left bottom;
+  background-repeat: no-repeat;
+}
+.scenaries .scenaries_item.f .description .title_block {
+  position: relative;
+  top: 40px;
+  left: 0;
+  transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
+}
 .scenaries .scenaries_item.f .description p {
   -webkit-line-clamp: 18;
+}
+@media screen and (min-width: 992px) {
+  .scenaries .scenaries_item.f .description:hover .title_block {
+    top: 0;
+  }
+}
+@media screen and (min-width: 992px) {
+  .scenaries .scenaries_item.f:hover .label {
+    top: 20%;
+  }
 }
 .scenaries .scenaries_item.h .description p {
   -webkit-line-clamp: 7;
