--- a/main/static/main/home/home.scss
+++ b/main/static/main/home/home.scss
@@ -110,12 +110,18 @@
         .label {
             position: absolute;
             width: max-content;
+            max-width: 100%;
             border-radius: 16px;
             display: flex;
             align-items: center;
             gap: 10px;
             padding: 12px 16px;
             background-color: var(--white);
+            overflow: hidden;
+
+            svg {
+                min-width: 20px;
+            }
         }
 
         .description {
@@ -143,6 +149,7 @@
 
             .title_block {
                 display: flex;
+                align-items: flex-start;
                 gap: 15px;
                 margin-bottom: 7.5px;
             }
@@ -216,23 +223,95 @@
             }
         }
         &.c {
+            .label {
+                top: 50%;
+                left: 30%;
+                transition: 0.3s cubic-bezier(.56,-0.64,.42,1.5);
+                transform: translateY(-50%);
+            }
             .description {
+                background-image: url('./../images/air_back.svg');
+                background-position: right bottom;
+                background-repeat: no-repeat;
+                .title_block {
+                    position: relative;
+                    top: 20%;
+                    left: 20%;
+                    transition: 0.2s cubic-bezier(.56,-0.64,.42,1.5);
+                    transition-delay: 0s;
+                }
                 p {
                     -webkit-line-clamp: 4;
+                }
+                @include common.mediaMinWidth(992) {
+                    &:hover {
+                        .title_block {
+                            transition-delay: 0.1s;
+                            top: 0;
+                            left: 0;
+                        }
+                    }
+                }
+            }
+            @include common.mediaMinWidth(992) {
+                &:hover {
+                    .label {
+                        top: 30%;
+                        left: 10%;
+                    }
                 }
             }
         }
         &.d {
+            .label {
+                top: 0%;
+                left: 0;
+            }
             .description {
+                background-image: url('./../images/mount_back.svg');
+                background-position: left bottom;
+                background-repeat: no-repeat;
                 p {
                     -webkit-line-clamp: 6;
                 }
             }
         }
         &.f {
+            .label {
+                top: 50%;
+                transform: translateY(-50%);
+                left: 0;
+                transition: 0.3s cubic-bezier(.48,-1.68,.55,1.9);
+            }
             .description {
+                background-image: url('./../images/mount_back.svg');
+                background-position: left bottom;
+                background-repeat: no-repeat;
+                .title_block {
+                    position: relative;
+                    top: 40px;
+                    left: 0;
+                    transition: 0.3s cubic-bezier(.56,-0.64,.42,1.5);
+                    // transition-delay: 0.1s;
+                }
                 p {
                     -webkit-line-clamp: 18;
+                }
+                
+                @include common.mediaMinWidth(992) {
+                    &:hover {
+                        .title_block {
+                            // transition-delay: 0.1s;
+                            top: 0;
+                        }
+                    }
+                }
+            }
+            @include common.mediaMinWidth(992) {
+                &:hover {
+                    .label {
+                        top: 20%;
+                    }
                 }
             }
         }
